base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
  labels:
    app: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
